...
                          Text('Hello '.tr + controller.username.value,
                              style: GoogleFonts.nunito(
                                  fontSize: 18,
                                  color: Colors.black,
                                  fontWeight: FontWeight.bold)),
                          Text(
                            'Welcome Back!'.tr,
                            style: GoogleFonts.nunito(
                                fontSize: 14, color: Styles.greyTextColor),
                          )
                        ],
                      ),
                      Spacer(),
...
